# HydroCpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
Examples/: Barge stability.xlsx  Input Example.xlsx  Output Example.xlsx
src/: HCLoader.cpp  HCPoint.cpp  HCPolygon.cpp  HCPolygonSplitter.cpp  HCPolygons.cpp  main.cpp
src/include/: HCConfig.hpp  HCLoader.hpp  HCLog.hpp  HCPoint.hpp  HCPolygon.hpp  HCPolygonSplitter.hpp  HCPolygons.hpp  HydroCppConfig.h.in
